Grant native access only where the running module declares it
A module that calls native code needs --enable-native-access, and that grant
belongs to the program that runs the code, never to a library it happens to
include. @jenesis.native declares it: a bare tag grants the module itself and
marks its jar with Jenesis-Native-Access: true, and a token grants a module or
coordinate the module runs with. Only the running module's own declarations
are honoured - for its test run, its Execute run, and the bundle, Docker
image, jpackage application and executable jar it packages - so no
dependency can grant itself anything; a library can only say that it needs
access. A grant adds no dependency, and one that names nothing the run holds
fails the build.

The header is information by default. jenesis.dependency.native=strict turns
it into a check: a module whose run includes a jar that declares the need
without the module granting it fails, naming each such jar.

A module isolated in a layer is granted the same way. The JVM cannot name a
module that only exists once the layer is defined, so the launch hands the
launcher jlayer.enableNativeAccess.<name>, and the launcher itself is granted
native access so that granting the layer's module prints no warning. A
pom.xml declares the same in a <!--jenesis.native ... --> comment block.

The native-access demo shows the grant, the test run's own grant and the
strict refusal; it follows the agents demo, so the later demos move up by
one.