@@ -97,21 +97,22 @@ Quick index
 | 46 | [`build-cache`](demo-46-build-cache/README.md)                    | Serve step outputs from a cache shared across builds                         | `java build/jenesis/Make.java`    |
 | 47 | [`docker-isolation`](demo-47-docker-isolation/README.md)          | Confine the build and the program it produces to a container                 | `java build/jenesis/Make.java`    |
 | 48 | [`agents`](demo-48-agents/README.md)                              | Attach a library as a Java agent with `@jenesis.attach`                      | `java build/Demo.java`            |
-| 49 | [`custom-assembler`](demo-49-custom-assembler/README.md)          | Wrap the assembler to preprocess sources before the regular flow             | `java build/Demo.java`            |
-| 50 | [`custom-jmod`](demo-50-custom-jmod/README.md)                    | Pack extra content into a `.jmod` and carry it into a packaged app           | `java build/Demo.java`            |
-| 51 | [`internal-module`](demo-51-internal-module/README.md)            | Move that preprocessing into a build module loaded from local source         | `java build/Demo.java`            |
-| 52 | [`external-module`](demo-52-external-module/README.md)            | Resolve the same build module as a published coordinate                      | `java build/Demo.java`            |
-| 53 | [`custom-maven`](demo-53-custom-maven/README.md)                  | Drive a multi-module Maven build without `Project`                           | `java build/Demo.java`            |
-| 54 | [`custom-modular`](demo-54-custom-modular/README.md)              | The same for `module-info.java` modules                                      | `java build/Demo.java`            |
-| 55 | [`custom-build`](demo-55-custom-build/README.md)                  | No template at all: wire the build by hand                                   | `java build/Demo.java`            |
-| 56 | [`tools-api`](demo-56-tools-api/README.md)                        | Run a build, or a published program, inside another program's JVM            | `java build/Demo.java`            |
-| 57 | [`code-signing`](demo-57-code-signing/README.md)                  | Sign the produced jar with `jarsigner`, keyed by the environment             | `java build/Demo.java`            |
-| 58 | [`publishing`](demo-58-publishing/README.md)                      | Assemble a Maven Central ready bundle and resolve it back                    | `java build/Demo.java`            |
-| 59 | [`module-convention`](demo-59-module-convention/README.md)        | Resolve your own modules from your own Maven repository                      | `java build/Demo.java`            |
-| 60 | [`reproducible`](demo-60-reproducible/README.md)                  | Build the same bytes on every machine, checked against a recorded digest     | `java build/Demo.java`            |
-| 61 | [`toolchain`](demo-61-toolchain/README.md)                        | Name the JDK the build runs on, and relaunch on it                           | `java build/jenesis/Execute.java` |
-| 62 | [`native-image`](demo-62-native-image/README.md)                  | Compile the application into a GraalVM native binary                         | `java build/jenesis/Make.java`    |
-| 63 | [`jpx`](demo-63-jpx/README.md)                                    | Run a released program without building anything                             | `java build/Demo.java`            |
+| 49 | [`native-access`](demo-49-native-access/README.md)                | Grant native access with `@jenesis.native`, and refuse an ungranted need     | `java build/jenesis/Execute.java` |
+| 50 | [`custom-assembler`](demo-50-custom-assembler/README.md)          | Wrap the assembler to preprocess sources before the regular flow             | `java build/Demo.java`            |
+| 51 | [`custom-jmod`](demo-51-custom-jmod/README.md)                    | Pack extra content into a `.jmod` and carry it into a packaged app           | `java build/Demo.java`            |
+| 52 | [`internal-module`](demo-52-internal-module/README.md)            | Move that preprocessing into a build module loaded from local source         | `java build/Demo.java`            |
+| 53 | [`external-module`](demo-53-external-module/README.md)            | Resolve the same build module as a published coordinate                      | `java build/Demo.java`            |
+| 54 | [`custom-maven`](demo-54-custom-maven/README.md)                  | Drive a multi-module Maven build without `Project`                           | `java build/Demo.java`            |
+| 55 | [`custom-modular`](demo-55-custom-modular/README.md)              | The same for `module-info.java` modules                                      | `java build/Demo.java`            |
+| 56 | [`custom-build`](demo-56-custom-build/README.md)                  | No template at all: wire the build by hand                                   | `java build/Demo.java`            |
+| 57 | [`tools-api`](demo-57-tools-api/README.md)                        | Run a build, or a published program, inside another program's JVM            | `java build/Demo.java`            |
+| 58 | [`code-signing`](demo-58-code-signing/README.md)                  | Sign the produced jar with `jarsigner`, keyed by the environment             | `java build/Demo.java`            |
+| 59 | [`publishing`](demo-59-publishing/README.md)                      | Assemble a Maven Central ready bundle and resolve it back                    | `java build/Demo.java`            |
+| 60 | [`module-convention`](demo-60-module-convention/README.md)        | Resolve your own modules from your own Maven repository                      | `java build/Demo.java`            |
+| 61 | [`reproducible`](demo-61-reproducible/README.md)                  | Build the same bytes on every machine, checked against a recorded digest     | `java build/Demo.java`            |
+| 62 | [`toolchain`](demo-62-toolchain/README.md)                        | Name the JDK the build runs on, and relaunch on it                           | `java build/jenesis/Execute.java` |
+| 63 | [`native-image`](demo-63-native-image/README.md)                  | Compile the application into a GraalVM native binary                         | `java build/jenesis/Make.java`    |
+| 64 | [`jpx`](demo-64-jpx/README.md)                                    | Run a released program without building anything                             | `java build/Demo.java`            |
 
 ## 1. A single Maven project - [`java-pom`](demo-01-java-pom/README.md)
 
@@ -717,7 +718,25 @@ follows the pin grammar without a version, anything after it is the agent's own
 option string, and the jar must carry a `Premain-Class`. A `pom.xml` project
 declares the same in a `<!--jenesis.attach ... -->` comment block.
 
-## 34. Customizing the build - [`custom-assembler`](demo-49-custom-assembler/README.md), [`custom-jmod`](demo-50-custom-jmod/README.md)
+## 34. Granting native access - [`native-access`](demo-49-native-access/README.md)
+
+Calling native code through the foreign function API or JNI needs
+`--enable-native-access`, and the grant is the running program's to give, not
+the library's. A library states its need with a bare tag, which marks its jar
+with `Jenesis-Native-Access: true`:
+
+    @jenesis.native
+
+The module that runs it grants it by name, and only that module's own
+declarations count, for its `Execute` run, its tests and what it packages:
+
+    @jenesis.native demo.natives.text
+
+`jenesis.dependency.native=strict` turns an ungranted need into a build failure
+that names the jar. A `pom.xml` project declares the same in a
+`<!--jenesis.native ... -->` comment block.
+
+## 35. Customizing the build - [`custom-assembler`](demo-50-custom-assembler/README.md), [`custom-jmod`](demo-51-custom-jmod/README.md)
 
 The next demos open up the template, and each is launched with
 `java build/Demo.java`. `custom-assembler` keeps the standard flow but wraps the
@@ -736,7 +755,7 @@ and adds a step that emits a configuration directory, which travels with the jmo
 into the linked runtime and into the packaged application, where the program
 reads it back from its own `<java.home>/conf/` - content a jar cannot carry.
 
-## 35. Build logic as a module - [`internal-module`](demo-51-internal-module/README.md), [`external-module`](demo-52-external-module/README.md)
+## 36. Build logic as a module - [`internal-module`](demo-52-internal-module/README.md), [`external-module`](demo-53-external-module/README.md)
 
 `internal-module` does the same preprocessing, but from a build module in its own
 `plugin/` project, compiled from local source and loaded as a service - it even
@@ -747,7 +766,7 @@ out of the host project's module discovery.
 published coordinate instead of compiled from source. Build logic is just another
 module: written inline, loaded from source, or consumed as a versioned artifact.
 
-## 36. Driving the build without `Project` - [`custom-maven`](demo-53-custom-maven/README.md), [`custom-modular`](demo-54-custom-modular/README.md)
+## 37. Driving the build without `Project` - [`custom-maven`](demo-54-custom-maven/README.md), [`custom-modular`](demo-55-custom-modular/README.md)
 
 These two drive a multi-module build from a hand-written `build/Demo.java`, with
 no layout and no goals, while reusing the whole standard toolchain:
@@ -760,7 +779,7 @@ no layout and no goals, while reusing the whole standard toolchain:
 `module-info.java` modules. The two-argument `make` discovers the modules and
 supplies the defaults a normal build would configure.
 
-## 37. Dropping the template entirely - [`custom-build`](demo-55-custom-build/README.md)
+## 38. Dropping the template entirely - [`custom-build`](demo-56-custom-build/README.md)
 
 The last of the customization demos removes the template altogether and wires the
 build by hand in one `main` method - no `pom.xml`, no `module-info.java`, just
@@ -771,7 +790,7 @@ model:
     java build/Demo.java
     java -cp target/jar/output/artifacts/classes.jar sample.Sample
 
-## 38. Running a build from another program - [`tools-api`](demo-56-tools-api/README.md)
+## 39. Running a build from another program - [`tools-api`](demo-57-tools-api/README.md)
 
 A build does not have to be a process of its own. `build.jenesis` publishes three
 `java.util.spi.ToolProvider` tools, named after the commands they answer to, so a
@@ -794,7 +813,7 @@ build runs in - naming another JDK with `jenesis.toolchain.version`, or a contai
 with `jenesis.project.docker` or `jenesis.execute.docker` - and each is refused by
 name rather than ignored. Reach for the `jenesis` command there.
 
-## 39. Signing the jar you publish - [`code-signing`](demo-57-code-signing/README.md)
+## 40. Signing the jar you publish - [`code-signing`](demo-58-code-signing/README.md)
 
 Where `openpgp` and `sigstore` ask who produced the dependencies coming in,
 `code-signing` answers the same question about what goes out, and answers it
@@ -817,7 +836,7 @@ The password is never a value: `storepass` takes `env <variable>` or
 `file <path>`, and anything else is refused. The signed jar replaces the unsigned
 one before the inventory, the staged repositories or a publication ever see it.
 
-## 40. Publishing to Maven Central - [`publishing`](demo-58-publishing/README.md)
+## 41. Publishing to Maven Central - [`publishing`](demo-59-publishing/README.md)
 
 Publishing is two jobs - produce a correct bundle and upload it - and Jenesis
 does the first. A `module-info.java` plus a `project.properties` supply the
@@ -833,7 +852,7 @@ Jenesis itself releases - so the demo needs no credentials, no key and no
 network. A `jreleaser.yml` at the project root adds that step to the `release`
 goal, a rehearsal unless told otherwise.
 
-## 41. Your own modules from your own Maven repository - [`module-convention`](demo-59-module-convention/README.md)
+## 42. Your own modules from your own Maven repository - [`module-convention`](demo-60-module-convention/README.md)
 
 `publishing` showed the coordinate a module is published under: the groupId from
 the first two dotted segments of its name, the artifactId from the whole name.
@@ -850,7 +869,7 @@ group reaches into the name is configuration too:
 
     jenesis.maven.segments=3
 
-## 42. The same bytes on every machine - [`reproducible`](demo-60-reproducible/README.md)
+## 43. The same bytes on every machine - [`reproducible`](demo-61-reproducible/README.md)
 
 What you publish, anyone holding the sources should be able to build again and
 get the same bytes. `reproducible` turns that into a check: it builds a module
@@ -865,7 +884,7 @@ the time of the release commit - and the recorded digest moves with it:
 
     jenesis.archive.timestamp=2026-09-01T12:00:00Z
 
-## 43. The JDK a build runs on - [`toolchain`](demo-61-toolchain/README.md)
+## 44. The JDK a build runs on - [`toolchain`](demo-62-toolchain/README.md)
 
 `reproducible` promises the same bytes for the same JDK; `toolchain` makes the
 JDK part of the project. Its `jenesis.properties` names one:
@@ -882,7 +901,7 @@ look is yours alone to say - `jenesis.toolchain.searchpath` defaults to the
 operating system's usual JDK folders and is accepted only from the command line
 or `~/.jenesis/jenesis.properties`, never from a project's own files.
 
-## 44. Ahead-of-time native image - [`native-image`](demo-62-native-image/README.md)
+## 45. Ahead-of-time native image - [`native-image`](demo-63-native-image/README.md)
 
 Where `jpackage` bundles your bytecode with a trimmed JVM, GraalVM
 `native-image` compiles the program and the runtime it touches into a single
@@ -903,7 +922,7 @@ Native image is an alternative to `jpackage`, not a successor: `jpackage` for a
 faithful bundle of the JVM you tested against, native image when startup and
 footprint dominate. It needs GraalVM, so it is a local exercise.
 
-## 45. Running a released program - [`jpx`](demo-63-jpx/README.md)
+## 46. Running a released program - [`jpx`](demo-64-jpx/README.md)
 
 Every demo so far built something. `jpx` builds nothing: it resolves a published
 module or Maven artifact, installs its runtime closure once under
